develop: getProdcutsPaged changed, quitamos un filtro de la query
