# src/main/resources/swagger.yaml
@@ -163,7 +163,6 @@ paths:
       parameters:
         - $ref: '#/components/parameters/productNameQueryParam'
         - $ref: '#/components/parameters/categoryNameQueryParam'
-        - $ref: '#/components/parameters/companyNameQueryParam'
         - $ref: '#/components/parameters/minPriceQueryParam'
         - $ref: '#/components/parameters/maxPriceQueryParam'
         - $ref: '#/components/parameters/pageNumberQueryParam'
@@ -489,12 +488,6 @@ components:
       required: false
       schema:
         $ref: '#/components/schemas/categoryName'
-    companyNameQueryParam:
-      name: companyName
-      in: query
-      required: false
-      schema:
-        $ref: '#/components/schemas/companyName'
     pageNumberQueryParam:
       name: pageNumberQueryParam
       in: query
